--- a/client/src/Components/ImageContainers/ImageContainer.scss
+++ b/client/src/Components/ImageContainers/ImageContainer.scss
@@ -21,7 +21,7 @@
 
             img {
                 max-height: 100%;
-                object-fit: contain;
+                object-fit: cover;
             }
         }
     }
